# packages

./: .editorconfig  .editorconfig-checker.json  .shellcheckrc  README.md
.github/workflows/: lint.yml
admin/autoupdater/: Makefile  manifest.sample
admin/autoupdater/files/etc/config/: autoupdater
admin/autoupdater/files/usr/sbin/: autoupdater
admin/autoupdater/src/: CMakeLists.txt  autoupdater.c  hexutil.c  hexutil.h  manifest.c  manifest.h  settings.c  settings.h  uclient.c  uclient.h  util.c  util.h  version.c  version.h
admin/pretty-hostname/: Makefile
admin/pretty-hostname/files/: pretty-hostname  pretty_hostname.lua
gluon/gluon-alfred/: Makefile
gluon/gluon-announce/: Makefile
gluon/gluon-announced/: Makefile
gluon/gluon-announced/src/: CMakeLists.txt  gluon-announced.c  miniz.c
gluon/gluon-autoupdater/: README.md
gluon/gluon-autoupdater/files/usr/sbin/: autoupdater
gluon/gluon-collect-data/: Makefile
gluon/gluon-config-mode-mesh-vpn/i18n/: de.po
gluon/gluon-core/: Makefile
gluon/gluon-firewall/: Makefile
gluon/gluon-luci-node-purpose/: Makefile
gluon/gluon-luci-wifi/: Makefile
gluon/gluon-luci-wifi-config/: Makefile
gluon/gluon-mesh-batman-adv-core/: check_site.lua
gluon/gluon-neighbour-info/src/: gluon-neighbour-info.c
gluon/gluon-node-purpose/: Makefile
gluon/gluon-simple-tc/: Makefile
gluon/gluon-status-page/: Makefile
gluon/gluon-wan-dnsmasq/: Makefile
gluon/gluon-wan-dnsmasq/files/etc/init.d/: gluon-wan-dnsmasq
lang/luasrcdiet/: Makefile
lang/node/: Makefile
libs/libpacketmark/: Makefile
libs/libpacketmark/src/: Makefile  libpacketmark.c
libs/libplatforminfo/: Config.in  Makefile
libs/libplatforminfo/src/: CMakeLists.txt  common.c  common.h
libs/libplatforminfo/src/include/: libplatforminfo.h
libs/libplatforminfo/src/targets/: ar71xx-mikrotik.c  armsr.c  brcm2708-bcm2709.c  brcm2708.c  custom.c  default.c  x86-kvm_guest.c
libs/libplatforminfo/src/targets/template/: board_name.c  nosysupgrade.c  subtarget.c  x86.c
libs/libuecc/: Makefile
libs/lua-deflate/: Makefile
libs/lua-deflate/src/: CMakeLists.txt  deflate.c  miniz.c
libs/lua-ethtool-stats/: Makefile  README
libs/lua-ethtool-stats/src/: Makefile  ethtool_stats.c
libs/lua-geolocate/: Makefile
libs/lua-geolocate/src/: geolocate.lua
libs/lua-hash/: Makefile
libs/lua-hash/src/: Makefile  hash.c  test.lua
libs/lua-jsonc/: Makefile
libs/lua-jsonc/src/: CMakeLists.txt  lua-jsonc.c  lua-jsonc.h
libs/lua-math-polygon/: Makefile
libs/lua-math-polygon/src/: math-polygon.lua
libs/lua-platform-info/: Makefile
libs/lua-platform-info/files/ar71xx/generic/: platform_info.lua
libs/lua-platform-info/files/ar71xx/nand/: platform_info.lua
libs/lua-platform-info/files/brcm2708/bcm2708/: platform_info.lua
libs/lua-platform-info/files/brcm2708/bcm2709/: platform_info.lua
libs/lua-platform-info/files/mpc85xx/generic/: platform_info.lua
libs/lua-platform-info/files/ramips/rt305x/: platform_info.lua
libs/lua-platform-info/files/sunxi/: platform_info.lua
libs/lua-platform-info/src/: Makefile  platform_info.c
libs/lua-simple-uci/: Makefile
libs/lua-simple-uci/src/: simple-uci.lua
luci/config-mode/: Makefile
net/batman-adv-legacy/: Config.in  Makefile
net/batman-adv-legacy/patches/: 0002-batctl-Add-required-includes-to-all-files.patch  0003-batctl-Fix-inconsistent-use-of-_GNU_SOURCE.patch  0004-batctl-Include-sys-types.h-for-caddr_t-definition.patch  0005-batctl-fix-wrong-header-lines-number-for-local-trans.patch  0006-batctl-Change-sysfs-and-debugfs-directories-to-batma.patch  0007-batctl-legacy-Change-binary-name-from-batctl-to-batc.patch
net/batman-adv-visdata/: Makefile
net/batman-adv-visdata/files/: batman-adv-visdata.init
net/batman-adv-visdata/src/: Makefile  batman-adv-visdata.c
net/brmldproxy/: Makefile
net/ebtables-tiny/: Makefile
net/ebtables-tiny/src/: Makefile  communication.c  ebtables-standalone.c  ebtables.c  getethertype.c  libebtc.c  useful_functions.c
net/ebtables-tiny/src/extensions/: ebt_arp.c  ebt_ip.c  ebt_ip6.c  ebt_limit.c  ebt_mark.c  ebt_mark_m.c  ebt_standard.c
net/ebtables-tiny/src/include/: ebtables.h  ebtables_u.h  ethernetdb.h
net/fastd/: Config.in  Makefile
net/fastd/files/: fastd.config  fastd.init
net/l3roamd/: Makefile
net/mmfd/: Makefile
net/mmfd/files/etc/init.d/: mmfd
net/respondd/: Makefile  README.md
net/respondd-airtime/: Makefile
net/respondd-airtime/src/: Makefile  airtime.c  airtime.h  demo.c  respondd.c
net/respondd-module-airtime/: Makefile  README.md
net/respondd-module-airtime/src/: Makefile  airtime.c  airtime.h  ifaces.c  ifaces.h  netlink.c  respondd.c
net/respondd-module-lldp/: Makefile  README.md
net/respondd-module-lldp/src/: Makefile  respondd.c
net/respondd-module-wifi/: Makefile  README.md
net/respondd-module-wifi/src/: Makefile  airtime.c  airtime.h  clients.h  ifaces.c  ifaces.h  neighbours.c  neighbours.h  netlink.c  netlink.h  respondd.c
net/respondd-module-wifisettings/: Makefile  README.md
net/respondd-module-wifisettings/src/: Makefile  respondd.c
net/respondd-wifi/: Makefile  README.md
net/respondd-wifi/src/: Makefile  clients.c  clients.h  ifaces.c  ifaces.h  neighbours.c  netlink.c  netlink.h  respondd.c
net/respondd/src/: CMakeLists.txt  miniz.c  respondd.c  respondd.h
net/roamguide/: Makefile  README
net/simple-tc/: Makefile
net/simple-tc/src/: Makefile  simple-tc.c
net/sse-multiplex/: Makefile
net/sse-multiplex/files/: sse-multiplexd.init
net/sse-multiplex/src/: CMakeLists.txt  sse-multiplex.c  sse-multiplex.h.in  sse-multiplexd.c
net/tunneldigger/: Makefile
net/tunneldigger/files/: tunneldigger.hotplug  tunneldigger.init
net/tunneldigger/patches/: 0001-tunneldigger-client-reset_broken_brokers.patch
net/uradvd/: Makefile
net/uradvd/src/: Makefile  uradvd.c
net/wgpeerselector/: Makefile  README.md
net/wifi-mesh-macfilter/: Makefile
utils/alfred-json/: Makefile
utils/ecdsautils/: Makefile
utils/libbabelhelper/: Makefile
utils/micrond/: Makefile
utils/uc/: Makefile
(+111 files in other folders)
